--- a/WebTemplatesTn/GeneradorVistaCatalogo.tt
+++ b/WebTemplatesTn/GeneradorVistaCatalogo.tt
@@ -1,14 +1,27 @@
-﻿<#@ template debug="false" hostspecific="false" language="C#" #>
+﻿<#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ assembly name="System.Core" #>
+<#@ assembly name="System.Xml" #>
+<#@ assembly name="System.IO" #>
+<#@ assembly name="System.Data" #>
+<#@ assembly name="System.Configuration" #>
+<#@ assembly name="Microsoft.SqlServer.ConnectionInfo" #>
+<#@ assembly name="Microsoft.SqlServer.Smo" #>
+<#@ assembly name="Microsoft.SqlServer.Management.Sdk.Sfc" #>
+
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
+<#@ import namespace="System.IO" #>
+<#@ import namespace="System.Data" #>
+<#@ import namespace="System.Data.SqlClient" #>
+<#@ import namespace="System.Configuration" #>
 <#@ import namespace="System.Collections.Generic" #>
+<#@ import namespace="Microsoft.SqlServer.Management.Smo" #>
+<#@ import namespace="Microsoft.SqlServer.Management.Common" #>
+
 <#@ output extension=".cshtml" #>
-
-
 <# 
 
-var modelo = "GenPersona ";
+var modelo = "GenPersona";
 var area = "General";
 var entidad = modelo.Substring(3, modelo.Length -3);
 var entidadPresentacion = entidad.Substring(0,1);
@@ -23,9 +36,7 @@ for(int i= 0; i<entidad.Length;i++){
 		}
 	}
 }
-
 //var prueba = UtilidadesGenerador.EntidadFormatoPresentacion(entidad);
-
 var modulo = modelo.Substring(3);
  #> 
 @model <#= modelo #>VM
