--- a/WebTemplatesTn/GeneradorVistaCatalogo.tt
+++ b/WebTemplatesTn/GeneradorVistaCatalogo.tt
@@ -33,15 +33,16 @@ for(int i= 0; i<entidad.Length;i++){
 	}
 }
 
-SqlConnection MyConnection = new SqlConnection(System.Configuration.ConfigurationSettings.AppSettings["ControlcBDEntities"]);
-try
+var conexion = ConfigurationManager.ConnectionStrings["ControlcBDEntities"].ToString();
+
+/*using (SqlConnection cnn = new SqlConnection(ConfigurationManager.ConnectionStrings["ControlcBDEntities"].ToString()))
 {
-    MyConnection.Open();
-}
-catch (Exception ex)
-{
-	Write("errorr: " + ex.ToString());
-}
+cnn.Open();
+/*string query = @"select TOTAL_PUNTOS from RESULTADOS where ID_ENCUESTA= 1";
+SqlCommand cmd = new SqlCommand(query, cnn);
+string a = Convert.ToString(cmd.ExecuteScalar());
+cnn.Close();
+}*/
 //SqlConnection conn = new SqlConnection(System.Configuration.ConfigurationManager.ConnectionStrings["ControlcBDEntities"].ToString());
 //conn.ConnectionString = ConfigurationManager.ConnectionStrings["ControlcBDEntities"].ConnectionString; //"Data Source=CROMERO\SQLEXPRESS;" +  "Initial Catalog=ControlcBD;" + "User id=adminservertaxi;" + "Password=adm1ns3rv3rtaxi*;";
 //conn.Open();
