--- a/WebTemplatesTn/GeneradorVistaCatalogo.cshtml
+++ b/WebTemplatesTn/GeneradorVistaCatalogo.cshtml
@@ -27,10 +27,93 @@
             @Html.HiddenFor(m => m.Estregistro, new { Value = 1 })
             @Html.Partial("_ValidationSummaryPersonalizado")
                 
-				Id								IDDDDDDDD
-								TdocumentoId								IDDDDDDDD
-								NumDocPrimerNombreSegundoNombrePrimerApellidoSegundoApellidoFechaNacimientoDireccionTelefonoTmunicipioId								IDDDDDDDD
-								CorreoElectronicoTelefono2ModoRegistroEstregistroArchivoID				
+												<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 									@Html.LabelFor(m => m.TdocumentoId)
+									@(Html.Kendo().DropDownListFor(m => m.TdocumentoId)                              
+										  .DataTextField("Nombre")
+										  .DataValueField("Id")
+										  .OptionLabel("Seleccione...")
+										  .DataSource(source =>
+										  {
+											  source.Custom().Type("aspnetmvc-ajax")
+												  .Transport(t =>
+												  {
+													  t.Read(r => r.Action("GetListTdocumentos", "Tlistas", new { Area = "ADMIN" }).Type(HttpVerbs.Post));
+												  })
+												  .ServerFiltering(false)
+												  .Schema(s => { s.Data("Data").Total("Total").Errors("Errors"); })
+												  .Events(e => e.Error("handleOnErrorModelState"));
+										  })
+										  .Filter("contains")
+										.HtmlAttributes(new { style = "width:100%;", @class = "itemComponente" })
+									)
+																	<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 									@Html.LabelFor(m => m.TmunicipioId)
+									@(Html.Kendo().DropDownListFor(m => m.TmunicipioId)                              
+										  .DataTextField("Nombre")
+										  .DataValueField("Id")
+										  .OptionLabel("Seleccione...")
+										  .DataSource(source =>
+										  {
+											  source.Custom().Type("aspnetmvc-ajax")
+												  .Transport(t =>
+												  {
+													  t.Read(r => r.Action("GetListTdocumentos", "Tlistas", new { Area = "ADMIN" }).Type(HttpVerbs.Post));
+												  })
+												  .ServerFiltering(false)
+												  .Schema(s => { s.Data("Data").Total("Total").Errors("Errors"); })
+												  .Events(e => e.Error("handleOnErrorModelState"));
+										  })
+										  .Filter("contains")
+										.HtmlAttributes(new { style = "width:100%;", @class = "itemComponente" })
+									)
+																	<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 								<div class="row">
+																	<div class="col-md-6">
+										<div class="form-group">
+						 				
 				<div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
